--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -97,7 +97,7 @@ body {
 
 .navbar-nav .nav-item.active .nav-link,
 .navbar-nav .nav-link:hover {
-    color: var(--blue;
+    color: var(--blue);
     /* Cor quando ativo ou hover */
 }
 
