--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -18,7 +18,7 @@ p {
 
 body {
     background-color: white;
-    height: 5000px;
+    /* height: 5000px; */
 }
 
 .pageContentBox {
@@ -91,7 +91,7 @@ body {
     padding: 30px 0px 30px 0px;
 }
 
-.navbar button {
+.classic_btn {
     padding: 15px 30px;
     border-radius: 3px;
     font-weight: bold;
@@ -122,4 +122,29 @@ body {
 .navbar-nav .nav-item.active .nav-link[href="./"] {
     color: var(--blue) !important;
     /* Cor específica para a página "Home" ativa */
+}
+
+/* ------------ */
+/* -- FOOTER -- */
+/* ------------ */
+
+footer p {
+    font-size: 12px;
+}
+
+footer h6,
+a {
+    font-size: 18px;
+}
+
+.nav-link.footer {
+    margin: 0px 10px 0px 0px;
+    color: var(--light-grey);
+}
+
+.nav-item.footer {
+    font-weight: 400;
+    padding: 0px;
+    font-size: 15px;
+    margin: 0px;
 }
