--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -167,3 +167,29 @@ a {
 .content span {
     font-size: 18px;
 }
+
+/* -- Services Card Grid -- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+/* rtl:begin:ignore */
+.marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+}
+
+/* -- NO BTN CARD -- */
+
+.card-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-text {
+    font-size: 12px;
+}
