--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,6 +3,7 @@
 :root {
     --black: #000000;
     --blue: #0D6EFD;
+    --light-blue: #4183FF;
     --light-grey: #909299;
     --white: #ffffff;
 }
@@ -86,7 +87,7 @@ body {
 /* ------------ */
 .navbar {
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     width: 100%;
     padding: 30px 0px 30px 0px;
 }
@@ -192,4 +193,18 @@ a {
 
 .card-text {
     font-size: 12px;
+}
+
+ /* Custom Styles */
+ .half-outside {
+    position: relative;
+    overflow: hidden;
+}
+
+.half-outside img {
+    position: absolute;
+    right: -25%; /* Adjust this value as needed */
+    top: 0;
+    width: 75%;
+    z-index: 1;
 }
